name:                SnakeGame
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/SnakeGame#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:   Lib
  exposed-modules:
    SnakeGameWorld, Letters
  build-depends:
    base >= 4.7 && < 5
    , gloss
  default-language:    Haskell2010

executable SnakeGame
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , SnakeGame
  ghc-options:        -O2 -Wall